--- a/templates/map.html
+++ b/templates/map.html
@@ -14,7 +14,7 @@
     <main class="layout">
         <aside id="navigation">
             <h2>Prefix Tree</h2>
-            <div id="prefix-tree"></div>
+            <div id="prefix-tree">Loading...</div>
         </aside>
         <section id="map-section">
             <h2>Visualization</h2>
