--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,45 +2,6 @@
 
 body {
     font-family: Arial, sans-serif;
-    margin: 20px;
-}
-
-#tooltip {
-    position: absolute;
-    text-align: center;
-    padding: 6px;
-    font: 12px sans-serif;
-    background: lightsteelblue;
-    border: 0px;
-    border-radius: 8px;
-    pointer-events: none;
-}
-
-.hidden {
-    display: none;
-}
-
-#prefix-tree ul {
-    list-style-type: none;
-    padding-left: 20px;
-}
-
-#prefix-tree li {
-    margin-bottom: 5px;
-}
-
-#prefix-tree a {
-    text-decoration: none;
-    color: blue;
-}
-
-#prefix-tree a.selected {
-    font-weight: bold;
-    color: darkred;
-}
-
-body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
@@ -118,4 +79,35 @@ pre {
     white-space: pre-wrap;
     word-wrap: break-word;
     overflow-y: auto;
+}
+
+#prefix-tree ul {
+    list-style-type: none;
+    padding-left: 20px;
+}
+
+#prefix-tree li {
+    margin-bottom: 5px;
+}
+
+#prefix-tree a {
+    text-decoration: none;
+    color: blue;
+}
+
+#prefix-tree a.selected {
+    font-weight: bold;
+    color: darkred;
+}
+
+#prefix-tree button {
+    background: none;
+    border: none;
+    color: #007BFF;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+#prefix-tree button:hover {
+    color: #0056b3;
 }
