--- a/templates/vrf.html
+++ b/templates/vrf.html
@@ -2,23 +2,27 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>VRF {{ vrf.name or 'Global' }}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/netbox.css') }}">
+    <link rel="stylesheet" href="/static/css/styles.css">
+    <script src="{{ url_for('static', filename='js/prefix_tree.js') }}" defer></script>
 </head>
+
 <body>
     <div class="navbar">
         <div class="navbar-brand">
-            <a href="/">NetBox Visualization</a>
+            <a href="/">Prefix Map</a>
         </div>
     </div>
     <div class="container">
         <div class="sidebar">
             <h2>Prefixes</h2>
+            <div id="prefix-tree">Loading...</div>
             <ul>
                 {% for prefix in prefixes %}
-                    <li><a href="/map/{{ vrf.id or 'None' }}/{{ prefix.sanitized }}">{{ prefix.display }}</a></li>
+                <li><a href="/map/{{ vrf.id or 'None' }}/{{ prefix.sanitized }}">{{ prefix.display }}</a></li>
                 {% endfor %}
             </ul>
         </div>
@@ -29,4 +33,5 @@
         </div>
     </div>
 </body>
+
 </html>
