--- a/templates/vrf.html
+++ b/templates/vrf.html
@@ -16,7 +16,7 @@
 <body>
     <div class="navbar">
         <div class="navbar-brand">
-            <a href="/">Prefix Map</a>
+            <a href="/">NetBox</a> >> <a href="{{ url_for('app.index') }}">Prefix Map</a>
         </div>
     </div>
     <div class="container">
